--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  
+    "homepage": "https:yryskeldi0101.github.io/Home-Work-26",
     "name": "order-food",
     "version": "0.1.0",
     "private": true,
@@ -13,6 +13,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.3.4",
+        "formik": "^2.2.9",
         "material-icons": "^1.13.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
