--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,21 +12,23 @@
     "overrides": [
         {
             "files": ["src/**/*.slice.js"],
-            "rules": {"no-param-reassign":["error", {"props": false}]}   
-
+            "rules": { "no-param-reassign": ["error", { "props": false }] }
         }
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    
+
     "plugins": ["react"],
     "rules": {
         "react/function-component-definition": "off",
         "react/prop-types": "off",
         "react/react-in-jsx-scope": "off",
         "react/jsx-props-no-spreading": "off",
-        "import/prefer-default-export": "off"
+        "import/prefer-default-export": "off",
+        "import/newline-after-import": "off",
+        "no-param-reassign": "off",
+        "react/no-array-index-key": "off"
     }
 }
