--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.3.4",
+        "date-fns": "^2.29.3",
         "formik": "^2.2.9",
         "material-icons": "^1.13.1",
         "react": "^18.2.0",
